trunk/Archive/02c600df4a197600b149d415a80187c8-70854cb7d61c5b883318b4d11e427bb9/output
+ g++ -std=c++1y -O3 -Wall -pthread main.cpp
main.cpp: In instantiation of ‘T& SimpleTuple<T, Ts ...>::get() [with T = short int; typename enable_if<(! is_same<T, Head>::value)>::type* <anonymous> = 0u; Head = int; Tail = {double, char}]’:
main.cpp:72:31:   required from here
main.cpp:52:9: error: static assertion failed: Type not found!
         static_assert(has_type<T, SimpleTuple>::value, "Type not found!");
         ^
